<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.javadev</groupId>
    <artifactId>firstalgorithm</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>java/swing application</name>
    <description>The java/swing application</description>
  
    <developers>
        <developer>
            <id>javadev</id>
            <name>Valentyn Kolesnikov</name>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/javadev/orderdatabase.git</connection>
        <developerConnection>scm:git:git://github.com/javadev/orderdatabase.git</developerConnection>
        <url>https://github.com/javadev/orderdatabase</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>examples.FirstAlgorithm</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Built-By></Built-By>
                            <Created-By></Created-By>
                            <Build-Jdk></Build-Jdk>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/maven/**</exclude>
                                        <exclude>META-INF/COPYRIGHT.html</exclude>
                                        <exclude>META-INF/LICENSE*</exclude>
                                        <exclude>META-INF/NOTICE*</exclude>
                                        <exclude>META-INF/README.txt</exclude>
                                        <exclude>META-INF/DEPENDENCIES*</exclude>
                                        <exclude>LICENSE.txt</exclude>
                                        <exclude>rhinoDiff.txt</exclude>
                                        <exclude>license/**</exclude>
                                        <exclude>checkstyle/**</exclude>
                                        <exclude>findbugs/**</exclude>
                                        <exclude>pmd/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.wvengen</groupId>
                <artifactId>proguard-maven-plugin</artifactId>
                <version>2.0.13</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>proguard</goal></goals>
                    </execution>
                </executions>
                <configuration>
                    <options>
                        <option>-allowaccessmodification</option>
                        <option>-keep public class examples.FirstAlgorithm</option>
                        <option>-dontwarn</option>
                        <option>-keepclassmembers class * { *** main(java.lang.String[]); }</option>
                        <option>-ignorewarnings</option>
                        <option>-dontnote</option>
                        <option>-keepclassmembers enum * {    public static **[] values();    public static ** valueOf(java.lang.String);}</option>
                    </options>
                    <libs>
                        <lib>${java.home}/lib/rt.jar</lib>
                        <lib>${java.home}/lib/jce.jar</lib>
                    </libs>
                </configuration>
            </plugin>
            <plugin>
              <groupId>com.akathist.maven.plugins.launch4j</groupId>
              <artifactId>launch4j-maven-plugin</artifactId>
              <version>1.7.23</version>
              <executions>
                <execution>
                  <id>l4j-clui</id>
                  <phase>package</phase>
                  <goals><goal>launch4j</goal></goals>
                  <configuration>
                    <headerType>console</headerType>
                    <outfile>firstalgorithm.exe</outfile>
                    <jar>firstalgorithm.jar</jar>
                    <icon>${basedir}/firstalgorithm.ico</icon>
                    <errTitle>firstalgorithm</errTitle>
                    <classPath>
                      <mainClass>examples.FirstAlgorithm</mainClass>
                      <addDependencies>false</addDependencies>
                      <preCp>anything</preCp>
                    </classPath>
                    <jre>
                      <minVersion>1.7.0</minVersion>
                      <initialHeapSize>128</initialHeapSize>
                      <maxHeapSize>2560</maxHeapSize>
                    </jre>
                    <versionInfo>
                      <fileVersion>11.0.0.0</fileVersion>
                      <txtFileVersion>firstalgorithm</txtFileVersion>
                      <fileDescription>firstalgorithm</fileDescription>
                      <copyright>Copyright (c) 2020</copyright>
                      <productVersion>11.0.0.0</productVersion>
                      <txtProductVersion>firstalgorithm</txtProductVersion>
                      <productName>firstalgorithm</productName>
                      <internalName>firstalgorithm</internalName>
                      <originalFilename>firstalgorithm.exe</originalFilename>
                    </versionInfo>
                  </configuration>
                </execution>
              </executions>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>2.18</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.3</version>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>taglist-maven-plugin</artifactId>
                <version>2.4</version>
            </plugin>
        </plugins>
    </reporting>

    <dependencies>
        <dependency>
            <groupId>org.swinglabs</groupId>
            <artifactId>swing-layout</artifactId>
            <version>1.0.3</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
